# verdeit

./: README.md  verdeit.cabal
exe/: Main.hs
lib/Web/: Verdeit.hs
skel/: Skel.hs
spec/: Spec.hs
